FullQa New/src/objects/Partner_Total_Value_Analysis__c.object
<CustomObject>
    <description>Used to track partner revenue estimates by the SAM group relative to estimated commissions potential</description>
    <fields>
        <fullName>ASP_Y1__c</fullName>
        <label>ASP Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP_Y2__c</fullName>
        <label>ASP Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASP_Y3__c</fullName>
        <label>ASP Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Total_Value_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CDMSignature__c</fullName>
        <formula>Account__r.CDM__r.FirstName &amp; &quot; &quot; &amp; Account__r.CDM__r.LastName &amp; BR() &amp;
Account__r.CDM__r.Phone &amp; BR() &amp;
Account__r.CDM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDM Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Revenue_Y1__c</fullName>
        <formula>ASP_Y1__c *  ROUND(New_Calc_Customers_Y1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Revenue Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calc_Revenue_Y2__c</fullName>
        <formula>ASP_Y2__c *  ROUND(New_Calc_Customers_Y2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Revenue Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calc_Revenue_Y3__c</fullName>
        <formula>ASP_Y3__c *  ROUND(New_Calc_Customers_Y3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Revenue Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientRevenueTotal__c</fullName>
        <formula>MS_Total_Revenue__c +  SIC_Code_Total_Revenue__c +  SS_Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Revenue Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Rate_Y1__c</fullName>
        <label>Close Rate Y1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Close_Rate_Y2__c</fullName>
        <label>Close Rate Y2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Close_Rate_Y3__c</fullName>
        <label>Close Rate Y3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Hour_Y1__c</fullName>
        <label>Cost Per Hour Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Hour_Y2__c</fullName>
        <label>Cost Per Hour Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Hour_Y3__c</fullName>
        <label>Cost Per Hour Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Marketing_Hour_Y1__c</fullName>
        <label>Cost Per Marketing Hour Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Marketing_Hour_Y2__c</fullName>
        <label>Cost Per Marketing Hour Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Marketing_Hour_Y3__c</fullName>
        <label>Cost Per Marketing Hour Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Sales_Hour_Y1__c</fullName>
        <label>Cost Per Sales Hour Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Sales_Hour_Y2__c</fullName>
        <label>Cost Per Sales Hour Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Sales_Hour_Y3__c</fullName>
        <label>Cost Per Sales Hour Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Calc_Customers_Y1__c</fullName>
        <formula>ROUND(New_Calc_Customers_Y1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Calc Customers Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Calc_Customers_Y2__c</fullName>
        <formula>ROUND(New_Calc_Customers_Y2__c +  Cumulative_Calc_Customers_Y1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Calc Customers Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Calc_Customers_Y3__c</fullName>
        <formula>ROUND(New_Calc_Customers_Y3__c +  Cumulative_Calc_Customers_Y2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Calc Customers Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Cost_Y1__c</fullName>
        <formula>Total_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Cost_Y2__c</fullName>
        <formula>Total_Cost_Y2__c + Cumulative_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Cost_Y3__c</fullName>
        <formula>Total_Cost_Y3__c + Cumulative_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Development_Cost_Y1__c</fullName>
        <formula>Total_Development_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Development Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Development_Cost_Y2__c</fullName>
        <formula>Cumulative_Development_Cost_Y1__c +  Total_Development_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Development Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Development_Cost_Y3__c</fullName>
        <formula>Cumulative_Development_Cost_Y2__c +  Total_Development_Cost_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Development Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Gain_Loss_Y1__c</fullName>
        <formula>Gain_Loss_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Gain / Loss Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Gain_Loss_Y2__c</fullName>
        <formula>Gain_Loss_Y2__c + Cumulative_Gain_Loss_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Gain / Loss Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Gain_Loss_Y3__c</fullName>
        <formula>Gain_Loss_Y3__c + Cumulative_Gain_Loss_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Gain / Loss Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Gain_Loss_Y4_STAMP__c</fullName>
        <label>Cumulative Gain / Loss Y4 STAMP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Marketing_Cost_Y1__c</fullName>
        <formula>Total_Marketing_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Marketing Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Marketing_Cost_Y2__c</fullName>
        <formula>Total_Marketing_Cost_Y1__c + Cumulative_Marketing_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Marketing Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Marketing_Cost_Y3__c</fullName>
        <formula>Total_Marketing_Cost_Y3__c + Cumulative_Marketing_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Marketing Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Returns_Customers_Y1__c</fullName>
        <formula>ROUND(New_Returns_Customers_Y1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Returns Customers Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Returns_Customers_Y2__c</fullName>
        <formula>ROUND(New_Returns_Customers_Y2__c +  Cumulative_Returns_Customers_Y1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Returns Customers Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Returns_Customers_Y3__c</fullName>
        <formula>ROUND(New_Returns_Customers_Y3__c +  Cumulative_Returns_Customers_Y2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Returns Customers Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Sales_Cost_Y1__c</fullName>
        <formula>Total_Sales_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Sales Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Sales_Cost_Y2__c</fullName>
        <formula>Total_Sales_Cost_Y2__c +  Cumulative_Sales_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Sales Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Sales_Cost_Y3__c</fullName>
        <formula>Total_Sales_Cost_Y3__c +  Cumulative_Sales_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Sales Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Training_Cost_Y1__c</fullName>
        <formula>Total_Training_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Training Cost Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Training_Cost_Y2__c</fullName>
        <formula>Total_Training_Cost_Y2__c +  Cumulative_Training_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Training Cost Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Training_Cost_Y3__c</fullName>
        <formula>Total_Training_Cost_Y3__c +  Cumulative_Training_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Training Cost Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_Loss_Y1__c</fullName>
        <formula>Total_Annual_Commissions_Y1__c - Total_Cost_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain / Loss Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_Loss_Y2__c</fullName>
        <formula>Total_Annual_Commissions_Y2__c - Total_Cost_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain / Loss Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_Loss_Y3__c</fullName>
        <formula>Total_Annual_Commissions_Y3__c - Total_Cost_Y3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain / Loss Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Spent_Qualifying_Each_Prospect_Y1__c</fullName>
        <label># Mins Spent Qualifying Each Prospect Y1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Spent_Qualifying_Each_Prospect_Y2__c</fullName>
        <label># Mins Spent Qualifying Each Prospect Y2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Spent_Qualifying_Each_Prospect_Y3__c</fullName>
        <label># Mins Spent Qualifying Each Prospect Y3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Development_Cost__c</fullName>
        <label>Initial Development Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSTotalASP__c</fullName>
        <formula>MS_Total_Revenue__c /  MS_Client_Count_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Total ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Client_Count_Total__c</fullName>
        <formula>MS_Tier_1_Client_Count__c + MS_Tier_2_Client_Count__c + MS_Tier_3_Client_Count__c + MS_Tier_4_Client_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Client Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_Tier_1_Client_ASP__c</fullName>
        <label>MS Tier 1 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_1_Client_Count__c</fullName>
        <inlineHelpText>25-50 states</inlineHelpText>
        <label>MS Tier 1 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_Tier_1_Client_Revenue__c</fullName>
        <formula>MS_Tier_1_Client_Count__c *  MS_Tier_1_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Tier 1 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_1_Commissions_Y1__c</fullName>
        <formula>Year_1_Commission_Rate__c  *  MS_Tier_1_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Tier 1 Commissions Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_1_Commissions_Y2__c</fullName>
        <formula>Recurring_Commission_Rate__c *  Number_of_Years__c  *  MS_Tier_1_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Tier 1 Commissions Recurring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_2_Client_ASP__c</fullName>
        <label>MS Tier 2 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_2_Client_Count__c</fullName>
        <inlineHelpText>7-25 states</inlineHelpText>
        <label>MS Tier 2 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_Tier_2_Client_Revenue__c</fullName>
        <formula>MS_Tier_2_Client_Count__c *  MS_Tier_2_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Tier 2 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_2_Commissions_Y1__c</fullName>
        <formula>Year_1_Commission_Rate__c *  MS_Tier_2_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Tier 2 Commissions Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_3_Client_ASP__c</fullName>
        <label>MS Tier 3 Client ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Tier_3_Client_Count__c</fullName>
        <inlineHelpText>2-6 states. Mostly &apos;SS Tier 1&apos;</inlineHelpText>
        <label>MS Tier 3 Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_Tier_3_Client_Revenue__c</fullName>
        <formula>MS_Tier_3_Client_Count__c *  MS_Tier_3_Client_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Tier 3 Client Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Total_Revenue__c</fullName>
        <formula>MS_Tier_1_Client_Revenue__c + MS_Tier_2_Client_Revenue__c + MS_Tier_3_Client_Revenue__c + MS_Tier_4_Client_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Total_Y1_Commissions__c</fullName>
        <formula>MS_Tier_1_Commissions_Y1__c  + MS_Tier_2_Commissions_Y1__c + MS_Tier_3_Commissions_Y1__c + MS_Tier_4_Commissions_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Total Year 1 Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Total_Y2_Commissions__c</fullName>
        <formula>MS_Tier_1_Commissions_Y2__c + MS_Tier_2_Commissions_Y2__c + MS_Tier_3_Commissions_Y2__c + MS_Tier_4_Commissions_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Total Recurring Commissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Calc_Customers_Y1__c</fullName>
        <formula>ROUND(Total_Addressable_Market_Y1__c *  of_TAM_Y1_Calc__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Calc Customers Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Calc_Customers_Y2__c</fullName>
        <formula>ROUND(Total_Addressable_Market_Y2__c * of_TAM_Y2_Calc__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Calc Customers Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Calc_Customers_Y3__c</fullName>
        <formula>ROUND(Total_Addressable_Market_Y3__c * of_TAM_Y3_Calc__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Calc Customers Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Commissions_Y1__c</fullName>
        <formula>Total_New_Revenue_Y1__c *  Year_1_Commission_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Commissions Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Commissions_Y2__c</fullName>
        <formula>Total_New_Revenue_Y2__c *  Year_1_Commission_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Commissions Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Commissions_Y3__c</fullName>
        <formula>Total_New_Revenue_Y3__c *  Year_1_Commission_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Commissions Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Returns_Customers_Y1__c</fullName>
        <formula>ROUND(of_TAM_Y1__c *  Total_Addressable_Market_Y1__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Returns Customers Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Returns_Customers_Y2__c</fullName>
        <formula>ROUND(of_TAM_Y2__c *  Total_Addressable_Market_Y2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Returns Customers Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Returns_Customers_Y3__c</fullName>
        <formula>ROUND(of_TAM_Y3__c *  Total_Addressable_Market_Y3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Returns Customers Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospect_Conversations_Y1__c</fullName>
        <formula>ROUND(( New_Calc_Customers_Y1__c +  New_Returns_Customers_Y1__c ) /  Close_Rate_Y1__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Prospect Conversations Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospect_Conversations_Y2__c</fullName>
        <formula>ROUND(( New_Calc_Customers_Y2__c +  New_Returns_Customers_Y2__c ) /  Close_Rate_Y2__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Prospect Conversations Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Prospect_Conversations_Y3__c</fullName>
        <formula>ROUND(( New_Calc_Customers_Y3__c +  New_Returns_Customers_Y3__c ) /  Close_Rate_Y3__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Prospect Conversations Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Reps_Y1__c</fullName>
        <label>Number of Sales Reps Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Reps_Y2__c</fullName>
        <label>Number of Sales Reps Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Reps_Y3__c</fullName>
        <label>Number of Sales Reps Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Hours_Y1__c</fullName>
        <label>Number of Training Hours Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Hours_Y2__c</fullName>
        <label>Number of Training Hours Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Hours_Y3__c</fullName>
        <label>Number of Training Hours Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Years__c</fullName>
        <label>Number of Recurring Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ongoing_Development_Cost__c</fullName>
        <label>Ongoing Development Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Marketing_Costs_Y1__c</fullName>
        <label>Other Marketing Costs Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Marketing_Costs_Y2__c</fullName>
        <label>Other Marketing Costs Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Marketing_Costs_Y3__c</fullName>
        <label>Other Marketing Costs Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRAContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRA Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Revenue Analysis</relationshipLabel>
        <relationshipName>Partner_Revenue_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Total_Client_Count__c</fullName>
        <formula>MS_Client_Count_Total__c + SS_Client_Count_Total__c + SIC_Code_Client_Count_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Total Client Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Total_Y2_Commission_Potential__c</fullName>
        <formula>MS_Total_Y2_Commissions__c + SIC_Code_Total_Y2_Commissions__c + SS_Total_Y2_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recurring Commission Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Total_Year_1_Potential__c</fullName>
        <formula>MS_Total_Y1_Commissions__c + SIC_Code_Total_Y1_Commissions__c + SS_Total_Y1_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Year 1 Commission Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Return_Y1__c</fullName>
        <label>Price per Return Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Return_Y2__c</fullName>
        <label>Price per Return Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Return_Y3__c</fullName>
        <label>Price per Return Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Annual_Rev_Cost_Y1__c</fullName>
        <formula>(Total_Annual_Commissions_Y1__c /  Total_Cost_Y1__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI (Annual Rev / Cost) Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROI_Annual_Rev_Cost_Y2__c</fullName>
        <formula>(Total_Annual_Commissions_Y2__c /  Total_Cost_Y2__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI (Annual Rev / Cost) Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROI_Annual_Rev_Cost_Y3__c</fullName>
        <formula>( Total_Annual_Commissions_Y3__c /  Total_Cost_Y3__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI (Annual Rev / Cost) Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Calc_Revenue_Y1__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Calc Revenue Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Calc_Revenue_Y2__c</fullName>
        <formula>ASP_Y2__c *  Cumulative_Calc_Customers_Y1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Calc Revenue Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Calc_Revenue_Y3__c</fullName>
        <formula>ASP_Y3__c *  Cumulative_Calc_Customers_Y2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Calc Revenue Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Commission_Rate__c</fullName>
        <label>Recurring Commission Rate (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recurring_Commissions_Y1__c</fullName>
        <formula>Total_Recurring_Revenue_Y1__c * 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Commissions Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Commissions_Y2__c</fullName>
        <formula>Total_Recurring_Revenue_Y2__c *  Recurring_Commission_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Commissions Y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Commissions_Y3__c</fullName>
        <formula>Total_Recurring_Revenue_Y3__c *  Recurring_Commission_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Commissions Y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Returns_Revenue_Y1__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Returns Revenue Y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>